STELLA, CHANGES

#### 2.1.3 (2011-07-06) ###############################

* FIXED: Stella::Report#postprocess loads log from a hash.
* CHANGE: CLI output


#### 2.1.1 (2011-07-06) ###############################

* ADDED: Append more info URI to CLI output for remote checkups

#### 2.1.0 (2011-07-06) ###############################

* FIXED: Different CLI output when a testplan is specified
* ADDED: Handle bad or missing api credentials
* ADDED: Globals -A and -K for supplying API credentials
* CHANGE: Default output is now CLI (use -F json)
* CHANGE: Global -f is now -u (for usecase)
* CHANGE: Global -F is now -f (output format)
* CHANGE: STELLA_USER env var is now STELLA_ACCOUNT


#### 2.0.3 (2011-07-06) ###############################

* ADDED: Stella::API
* ADDED: --remote global for running checkups via www.blamestella.com (beta)


#### 2.0.2 (2011-06-09) ###############################

* FIXED: Gibbler ID fixes
* ADDED: --wait option for checkup command
* CHANGE: Don't freeze testplan


#### 2.0.1 (2011-06-08) ###############################

NOTE: First release of 2.x.


#### 0.8.X (XXXX-XX-XX) ###############################

NOTE: We're now focusing our effort on 2.0, so these features are still 
      outstanding for a 1.x release (they probably won't be worked on).

* TODO: Force response block content type. 
* TODO: Add option to dump full request/response output to a file by client
* TODO: review cookie handling. Not always sent automatically. 
* TODO: review :variables in URI elements
* TODO: global responses
* TODO: request block conditions. 
* TODO: process templates for calls to set in get blocks

#### 0.8.8 (2011-02-26) ###############################

* FIXED: Require benelux 0.5.17 (fixed for Ruby 1.9.2)

#### 0.8.7.002 (2010-06-14) ###############################

* FIXED: Specifying a host w/ a path and no testplan no longer doubles up the path
* ADDED: Global HTTP client timeout ("stella -T 60")