@@ -3,6 +3,7 @@ STELLA, CHANGES
 #### 2.1.3 (2011-07-06) ###############################
 
 * FIXED: Stella::Report#postprocess loads log from a hash.
+* CHANGE: Move stella/api.rb content to stella.rb
 * CHANGE: CLI output
 
 
